# powerlifting-ml-progress

./: .gitignore  .pre-commit-config.yaml  .python-version  .sqlfluff  CLAUDE.md  Dockerfile  Makefile  README.md  about.py  dashboard.ipynb  dashboard.py  data_science_journey.md  docker-compose.yml  mlruns.db  pyproject.toml
.env/: project.env
.github/workflows/: extract-transform-load.yml  scrape.yml
docs/superpowers/plans/: 2026-04-23-potential-aware-dots-modelling.md
infra/: .terraform.lock.hcl  iam.tf  main.tf  outputs.tf  s3.tf  variables.tf
mlruns/0/: meta.yaml
mlruns/286995781569192537/: meta.yaml
notebooks/: README.md  dashboard.ipynb  eda_linear_regression.ipynb  etl-duckdb.ipynb  etl-polars.ipynb  etl.ipynb  etl.md  scrap-liftingcast.ipynb
pages/: 01_🤖_machine_learning.py  02_🏋️_user_data.py  03_💪_strength_progress.py  04_📊_advanced_analytics.py  🏋️_user_data.py
plans/: dbt-vs-polars-evaluation.md
reference-tables/: README.md  meet-type.csv  usa-power-lifting-australia-tsf-team-champs-at-the-fort-2024.opl.csv
scripts/: download-data.sh  infra.sh  setup.sh
sqls/: 00_schemas.sql  01_landing.sql  02_raw.sql
steps/: 00_clean.py  01_extract.py  01_load.py  01_load_data.py  02_load.py  02_raw.py  03_base.py  03_raw.py  04_analyses.py  04_base.py  04_describe.py  04_feature_engineering.py  05_train.py  06_train.py  common_io.py  conf.py  utils.py
templates/: README.md
tests/: conftest.py  test_conf_dots_constants.py  test_dots_features.py  test_dots_source_smoke.py  test_leakage_guard.py  test_potential_features.py  test_raw_filters.py  test_smoke.py  test_training_pipeline.py
tutorial/data/: most_frequent_words.json  topstories.csv  topstory_ids.json
tutorial/tutorial/: assets.py
tutorial/tutorial.egg-info/: SOURCES.txt
(+7919 files in other folders)
