[tool.poetry]
name = "powerlifting-ml-progress"
version = "0.1.0"
description = ""
authors = ["Nam Tonthat <n.nam.tonthat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
polars = "^0.16.14"
requests = "^2.29.0"
boto3 = "^1.26.131"
streamlit = "^1.22.0"
watchdog = "^3.0.0"
jinja2 = "^3.1.2"
seaborn = "^0.12.2"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
scikit-learn = "^0.24.0"
xgboost = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
