[project]
name = "powerlifting-ml-progress"
version = "0.1.0"
requires-python = ">=3.13.0"
readme = "README.md"
dependencies = [
  "boto3>=1.37.18",
  "jinja2>=3.1.6",
  "matplotlib>=3.10.1",
  "mlflow>=2.21.0",
  "optuna>=4.2.1",
  "optuna-integration[xgboost]>=4.7.0",
  "polars>=1.26.0",
  "pre-commit>=4.2.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "seaborn>=0.13.2",
  "streamlit>=1.43.2",
  "xgboost>=3.0.0",
]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "G", "I", "PT", "PTH", "RUF", "SIM", "T20"]
ignore = ["E501", "G004"]
